// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow Manipulation actions should replace router node with a single-action node 1`] = `
Object {
  "inboundConnections": Object {
    "node0_exit0": "node0",
  },
  "node": Object {
    "actions": Array [
      Object {
        "all_urns": false,
        "text": "Hey!",
        "type": "send_msg",
        "uuid": "68b029c9-6400-4f46-947a-b61c619a7198",
      },
    ],
    "exits": Array [
      Object {
        "destination_node_uuid": "node2",
        "name": null,
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
    ],
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
  "ui": Object {
    "position": Object {
      "bottom": 370,
      "left": 0,
      "right": 220,
      "top": 280,
    },
  },
}
`;

exports[`Flow Manipulation init should initialize definition: nodes 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation node editor normal editing should edit router nodes 1`] = `
Array [
  Object {
    "payload": Object {
      "settings": Object {
        "languages": Array [],
        "localizations": Array [],
        "originalNode": Object {
          "inboundConnections": Object {
            "node0_exit0": "node0",
          },
          "node": Object {
            "actions": Array [],
            "exits": Array [
              Object {
                "destination_node_uuid": "node2",
                "name": "Red",
                "uuid": "node1_exit0",
              },
              Object {
                "destination_node_uuid": "node2",
                "name": "Green",
                "uuid": "node1_exit1",
              },
              Object {
                "destination_node_uuid": "node2",
                "name": "Other",
                "uuid": "node1_exit2",
              },
            ],
            "router": Object {
              "cases": Array [
                Object {
                  "arguments": Array [
                    "red",
                  ],
                  "exit_uuid": "uuid_node1_exit0",
                  "type": "has_any_word",
                  "uuid": "node1_case0",
                },
                Object {
                  "arguments": Array [
                    "green",
                  ],
                  "exit_uuid": "uuid_node1_exit1",
                  "type": "has_any_word",
                  "uuid": "node1_case1",
                },
              ],
              "default_exit_uuid": "node1_exit2",
              "operand": "@run.input",
              "result_name": "color",
              "type": "switch",
            },
            "uuid": "node1",
            "wait": Object {
              "type": "msg",
            },
          },
          "ui": Object {
            "position": Object {
              "bottom": 370,
              "left": 0,
              "right": 220,
              "top": 280,
            },
            "type": "wait_for_response",
          },
        },
        "showAdvanced": false,
      },
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
  Object {
    "payload": Object {
      "typeConfig": Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
      },
    },
    "type": "UPDATE_TYPE_CONFIG",
  },
  Object {
    "payload": Object {
      "editorState": Object {
        "debug": null,
        "dragGroup": false,
        "dragSelection": null,
        "fetchingFlow": false,
        "ghostNode": null,
        "language": null,
        "nodeDragging": false,
        "nodeEditorOpen": false,
        "translating": false,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  Object {
    "payload": Object {
      "editorState": Object {
        "debug": null,
        "dragGroup": false,
        "dragSelection": null,
        "fetchingFlow": false,
        "ghostNode": null,
        "language": null,
        "nodeDragging": false,
        "nodeEditorOpen": true,
        "translating": false,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
]
`;

exports[`Flow Manipulation node editor opening and closing should only update things that are set 1`] = `
Array [
  Object {
    "payload": Object {
      "editorState": Object {
        "debug": null,
        "dragGroup": false,
        "dragSelection": null,
        "fetchingFlow": false,
        "ghostNode": null,
        "language": null,
        "nodeDragging": false,
        "nodeEditorOpen": false,
        "translating": false,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  Object {
    "payload": Object {
      "settings": null,
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
]
`;

exports[`Flow Manipulation node editor opening and closing should reset the node editor 1`] = `
Array [
  Object {
    "payload": Object {
      "editorState": Object {
        "ghostNode": null,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  Object {
    "payload": Object {
      "settings": null,
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
]
`;

exports[`Flow Manipulation nodes removal should remove node node0: Remove node0 1`] = `
Object {
  "node1": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node1: Remove node1 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node2": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node2: Remove node2 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node3",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node3",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node3: Remove node3 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes should store a pending connection when starting a drag 1`] = `
Array [
  Object {
    "payload": Object {
      "editorState": Object {
        "debug": null,
        "dragGroup": false,
        "dragSelection": null,
        "fetchingFlow": false,
        "ghostNode": Object {
          "ghost": true,
          "inboundConnections": Object {
            "node0_exit0": "node0",
          },
          "node": Object {
            "actions": Array [],
            "exits": Array [
              Object {
                "destination_node_uuid": null,
                "name": "All Responses",
                "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
              },
            ],
            "router": Object {
              "result_name": "Result 1",
              "type": "switch",
            },
            "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
            "wait": Object {
              "type": "msg",
            },
          },
          "ui": Object {
            "position": Object {
              "left": 0,
              "top": 0,
            },
          },
        },
        "language": null,
        "nodeDragging": false,
        "nodeEditorOpen": false,
        "translating": false,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
]
`;
